# zk-calculator

./: .gitignore  Cargo.toml  README.md
src/: calculator_circuit.rs  errors.rs  main.rs  parser.rs  zk_calculator.rs
src/chips/: add.rs  arithmetic.rs  mod.rs  mul.rs  sub.rs
